; ModuleID = '/home/carl/AnghaBench/openwrt/package/utils/fritz-tools/src/extr_fritz_tffs_read.c_print_entry_value.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/utils/fritz-tools/src/extr_fritz_tffs_read.c_print_entry_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tffs_entry = type { i32*, i32 }

@stdout = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"%c\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tffs_entry*)* @print_entry_value to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_entry_value(%struct.tffs_entry* %0) #0 {
  %2 = alloca %struct.tffs_entry*, align 8
  %3 = alloca i32, align 4
  store %struct.tffs_entry* %0, %struct.tffs_entry** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %21, %1
  %5 = load i32, i32* %3, align 4
  %6 = load %struct.tffs_entry*, %struct.tffs_entry** %2, align 8
  %7 = getelementptr inbounds %struct.tffs_entry, %struct.tffs_entry* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 8
  %9 = call i32 @get_header_len(i32 %8)
  %10 = icmp slt i32 %5, %9
  br i1 %10, label %11, label %24

11:                                               ; preds = %4
  %12 = load i32, i32* @stdout, align 4
  %13 = load %struct.tffs_entry*, %struct.tffs_entry** %2, align 8
  %14 = getelementptr inbounds %struct.tffs_entry, %struct.tffs_entry* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = load i32, i32* %3, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %15, i64 %17
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @fprintf(i32 %12, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %19)
  br label %21

21:                                               ; preds = %11
  %22 = load i32, i32* %3, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %3, align 4
  br label %4

24:                                               ; preds = %4
  ret void
}

declare dso_local i32 @get_header_len(i32) #1

declare dso_local i32 @fprintf(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
